--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <span>09h-12h</span>
           </header>
           <ul id="period-morning" class="period">
-            <!-- Exemplo  -->
+            <!-- Exemplo  
             <li>
               <strong>11:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -143,7 +143,7 @@
                 alt="Cancelar"
                 class="cancel-icon"
               />
-            </li>
+            </li> -->
           </ul>
         </section>
 
@@ -154,7 +154,7 @@
             <span>13h-18h</span>
           </header>
           <ul id="period-afternoon" class="period">
-            <!-- Exemplo -->
+            <!-- Exemplo 
             <li>
               <strong>14:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -163,7 +163,7 @@
                 alt="Cancelar"
                 class="cancel-icon"
               />
-            </li>
+            </li> -->
           </ul>
         </section>
 
@@ -174,7 +174,7 @@
             <span>19h-21h</span>
           </header>
           <ul id="period-night" class="period">
-            <!-- Exemplo -->
+            <!-- Exemplo 
             <li>
               <strong>19:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -183,7 +183,7 @@
                 alt="Cancelar"
                 class="cancel-icon"
               />
-            </li>
+            </li> -->
           </ul>
         </section>
       </aside>
